2010-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): Fix "pause mouse" for gnuplot.exe on
	Windows.

2010-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/version.c: gnuplot_patchlevel[] should be 0-rc1 not rc1.

2010-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* INSTALL: Add section explaining the libreadline problem on OSX.

2010-01-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/wgraph.c (drawgraph pattern_bitmaps): Synchronize fill
	patterns of the Windows terminal with other terminals.

2010-01-15  <ottxor@users.sourceforge.net>

	* configure.in src/Makefile.am demo/Makefile.am.in:
	"make check" needs help if we did ./configure --program-suffix=FOO
	In this case make a temporary symlink so that 'make check' can find
	gnuplot_x11.
	Bug #2926141

2010-01-12  <ottxor@users.sourceforge.net>

	* configure.in share/Makefile.am:  Do not install LaTeX support files
	if there is no latex on the system.  Add configuration option
	--without-latex
	Bug #2928310

2010-01-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Always start a new path with a moveto.
	Bug #2930705

	* src/plot2d.c (store2d_point): steps, fsteps, and histeps were
	incorrectly auto-scaling to yhigh (which is really variable color).
	Bug #2929314

2010-01-10  <ottxor@users.sourceforge.net>

	* share/Makefile.am:  Do not install x11 appdefaults file if no
	X11 support is selected.  Bug #2928271

2010-01-06  Alexander Täschner  <taschna@users.sourceforge.net>

	* config/config.nt src/datafile.c src/eval.c src/plot.c src/stdfn.c
	src/stdfn.h: Define a generic function not_a_number() in which we can
	hide platform-specific implementations.  Add a support for initializing
	NaN and GPVAL_NaN on Windows.
	Bug #2925544

2010-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/PostScript/prologues.h:
	Update version in PostScript prolog.
	Define a user-configurable flag SuppressPDFMark.
